tests/checker/diagnostics/0109_core_plus_bool_10.ml.infer.expected
File "0109_core_plus_bool_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0109_core_plus_bool_10 is not a valid module name.

File "0109_core_plus_bool_10.ml", line 2, characters 32-36:
2 | let _ = let _ignore = 9 in (1 + true)
                                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
